--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
 #firebase config
 REACT_APP_FIREBASE_APIKEY="AIzaSyC696xmrez4R-dgH7cPxX74dVYUEkDeeQs"
+REACT_APP_FIREBASE_AUTHDOMAIN="wdf-training.firebaseapp.com"
+-
+-
 REACT_APP_FIREBASE_MESSAGINGSENDERID="11650433920"
 REACT_APP_FIREBASE_APPID="1:11650433920:web:c891c49496895c79c2b765"
 
+#emailjs
+REACT_APP_SERVICE_ID=
+REACT_APP_TEMPLATE_ID=
+REACT_APP_PUBLIC_KEY=
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USER=davonwashington784@gmail.com
+EMAIL_PASS=wzcprcxibrmvqqgk
+EMAIL_PORT=465
