--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wdftraining.com",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@iconify/react": "^4.1.0",
