--- a/.env
+++ b/.env
@@ -7,11 +7,6 @@ REACT_APP_FIREBASE_MESSAGINGSENDERID="11650433920"
 REACT_APP_FIREBASE_APPID="1:11650433920:web:c891c49496895c79c2b765"
 
 #emailjs
-REACT_APP_SERVICE_ID=
-REACT_APP_TEMPLATE_ID=
-REACT_APP_PUBLIC_KEY=
-
-EMAIL_HOST=smtp.gmail.com
-EMAIL_USER=davonwashington784@gmail.com
-EMAIL_PASS=wzcprcxibrmvqqgk
-EMAIL_PORT=465
+REACT_APP_SERVICE_ID="service_3layuva"
+REACT_APP_TEMPLATE_ID="template_dibn32n"
+REACT_APP_PUBLIC_KEY="TY4aTjnvdmfMqJwA0"
